--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1>Welcome!</h1>
+<p>Click "Start" to enter</p>
+<button type="button">START</button>
+</body>
+</html>
