make button a link (part I)

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>Welcome!</h1>
-<p>Click "Start" to enter</p>
-<button type="button">START</button>
+  <h1>Welcome!</h1>
+  <p>Click "Start" to enter</p>
+  <a href=><button type="button">START</button></a>
 </body>
 </html>
