Update START button link to point to start.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
   <h1>Welcome!</h1>
   <p>Click "Start" to enter</p>
-  <a href=><button type="button">START</button></a>
+  <a href="start.html"><button type="button">START</button></a>
 </body>
 </html>
