Add basic HTML structure to wrongq1.html

--- a/wrongq1.html
+++ b/wrongq1.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+  <h1>WRONG!</h1>
+  <p>According to a concerning amount of companies, working hard for more than 8 hours a day is ok!</p>
+</body>
+</html>
