Add question and buttons to q2.html

--- a/q2.html
+++ b/q2.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <h1>What would a child rather do to pass their time? </h1>
+  <a href="wrongq2.html"><button class="left">Play in the garden</button>
+  <a href="right.html"><button class="right">Work a 9 to 5</button></a>
 </body>
 </html>
