--- a/start.html
+++ b/start.html
@@ -4,6 +4,6 @@
   <p>Let's start with the 1st question</p>
   <h1>What would a child rather do to pass their time? </h1>
   <a href="wrongq1.html"><button class="left">Play in the garden</button>
-  <a href="rightq1.html"><button class="right">Work a 9 to 5</button></a>
+  <a href="right.html"><button class="right">Work a 9 to 5</button></a>
 </body>
 </html>
