Add head section with script reference

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
   <script src="script.js"></script>
+</head>
 <body>
   <h1>Welcome!</h1>
   <p>Click "Start" to enter</p>
