--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
   <h1>Welcome!</h1>
   <p>Click "Start" to enter</p>
   <a href="start.html"><button type="button">START</button></a>
+  <!-- Draggable DIV -->
+  <div id="mydiv">
+  <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+   <div id="mydivheader">Click here to move</div>
+    <p>Move</p>
+    <p>this</p>
+    <p>DIV</p>
+  </div>
 </body>
 </html>
