--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
