Modify questionnaire and add stylesheet link
Updated the questionnaire content and added a stylesheet link.

--- a/q2.html
+++ b/q2.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <link rel="stylesheet" href="style.css">
+  <title>Questionnare</title>
+</head>
 <body>
-  <h1>What would a child rather do to pass their time? </h1>
-  <a href="wrongq2.html"><button class="left">Play in the garden</button>
-  <a href="right.html"><button class="right">Work a 9 to 5</button></a>
+  <p>Ok. That was a trick question.</p>
+  <h1>What company should you support?</h1>
+  <div class="button">
+    <a href="wrongq2.html"><button class="left">Large company, that supports & uses child labour (or has a history with it)</button>
+    <a href="right.html"><button class="right">Company, still large, that uses ethical labour and humane work hours</button></a>
+  </div>
 </body>
 </html>
