--- a/right.html
+++ b/right.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <link rel="stylesheet" href="style.css">
+  <title>Questionnare</title>
+</head>
 <body>
   <h1>Right!</h1>
+  <div class="button">
+    <a href="q2.html"><button>NEXT</button></a>
+    <a href="start.html"><button>BACK</button></a>
+  </div>
 </body>
 </html>
