Refactor button links into a div container

--- a/start.html
+++ b/start.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <link rel="stylesheet" href="style.css">
+  <title>Questionnare</title>
+</head>
 <body>
   <p>Let's start with the 1st question</p>
   <h1>What would a child rather do to pass their time? </h1>
-  <a href="wrongq1.html"><button class="left">Play in the garden</button>
-  <a href="right.html"><button class="right">Work a 9 to 5</button></a>
+  <div class="button">
+    <a href="wrongq1.html"><button class="left">Play in the garden</button></a>
+    <a href="right.html"><button class="right">Work a 9 to 5</button></a>
+  </div>
 </body>
 </html>
