Add head section and navigation buttons to HTML

--- a/wrongq1.html
+++ b/wrongq1.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <link rel="stylesheet" href="style.css">
+  <title>Questionnare</title>
+</head>
 <body>
   <h1>WRONG!</h1>
   <p>According to a concerning amount of companies, working hard for more than 8 hours a day is ok!</p>
+  <div class="button">
+    <a href="q2.html"><button>NEXT</button></a>
+    <a href="start.html"><button>BACK</button></a>
+  </div>
 </body>
 </html>
