Add HTML structure to wrongq2.html

--- a/wrongq2.html
+++ b/wrongq2.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Questionnare</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>WRONG</h1>
+    <p>It's better to support small companies (or any) that don't use child labour</p>
+    <div class="button">
+       <a href="q2.html"><button>BACK</button></a>
+    </div>
+</body>
+</html>
