Update link to ethical company page

--- a/q2.html
+++ b/q2.html
@@ -9,7 +9,7 @@
   <h1>What company should you support?</h1>
   <div class="button">
     <a href="wrongq2.html"><button class="left">Large company, that supports & uses child labour (or has a history with it)</button>
-    <a href="right.html"><button class="right">Company, still large, that uses ethical labour and humane work hours</button></a>
+    <a href="right1.html"><button class="right">Company, still large, that uses ethical labour and humane work hours</button></a>
   </div>
 </body>
 </html>
